<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_textview">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="page_1_title">Username: %1$s</string>
    <string name="page_1_toolbar_title">Random number example</string>
    <string name="page_2_title">Page 2</string>
    <string name="page_2_toolbar_title">Example Request</string>
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_login">Login</string>
    <string name="password_missing">Es necesario ingresar contraseña</string>
    <string name="mail_missing">Es necesario ingresar mail</string>
    <string name="mail_example">Un ejemplo de formato válido es example@domain.com</string>
    <string name="sign_up">Sign up</string>
    <string name="password_hint">Password</string>
    <string name="login">LOG IN</string>
    <string name="hint_mail">Mail</string>
    <string name="terms_and_conditions">By joining you agree to our <a href="https://www.wolox.com.ar/">Terms and Conditions</a></string>
    <string name="mail_or_password_are_incorrect">El email o la contraseña son incorrectos.</string>
    <string name="disconnected_cellphone">Error - El dispositivo no está conectado a Internet</string>
    <string name="connecting_to_api">Conectandose a la API</string>
    <string name="loading">Cargando ...</string>
    <string name="failed_api_connection">Error - No se pudo conectar con el servidor</string>
    <string name="wolox">Wolox</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="news_title">Title</string>
    <string name="time">Time</string>

</resources>